fix x overflow on post meta

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -379,3 +379,7 @@ figcaption > h4 {
     white-space: pre;
     overflow-x: auto;
 }
+
+.row {
+    margin-right: -10px;
+}
